--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column1</div>
         <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column2</div>
         <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column3</div>
+
+        <strong class="tag-red">특가</strong>
+        <strong class="tag-gray">무료배송</strong>
+        <strong class="tag-green">첫 리뷰 두 배 적립</strong>
       </div>
     </div>
   </body>
