--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
         <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column2</div>
         <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column3</div>
 
-        <strong class="tag-red">특가</strong>
-        <strong class="tag-gray">무료배송</strong>
-        <strong class="tag-green">첫 리뷰 두 배 적립</strong>
+        <div>
+          <strong class="tag-red">특가</strong>
+          <strong class="tag-gray">무료배송</strong>
+          <strong class="tag-green">첫 리뷰 두 배 적립</strong>
+        </div>
+
+      </div>
+      <div class="avatar-32">
+        <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
+      </div>
+      <div class="avatar-24">
+        <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
       </div>
     </div>
   </body>
