--- a/index.html
+++ b/index.html
@@ -43,5 +43,28 @@
         <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
       </div>
     </div>
+    <div>
+      <div class="star-rating-13">
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+      </div>
+      <div class="star-rating-20">
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+      </div>
+      <div class="star-rating-24">
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+        <i class="ic-star is-active"></i>
+      </div>
+    </div>
   </body>
 </html>
