--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
       <div class="avatar-24">
         <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
       </div>
-    </div>
-    <div>
       <div class="star-rating-13">
         <i class="ic-star is-active"></i>
         <i class="ic-star is-active"></i>
@@ -129,6 +127,22 @@
         <div class="input-group">
           <i class="ic-search" aria-hidden></i>
           <input class="form-input" type="text" placeholder="스토어 검색">
+        </div>
+
+        <div class="pagination">
+          <button type="button" class="page-control page-prev">
+            <i class="ic-chevron"></i>
+          </button>
+          <ol class="page-list">
+            <li class="page-item is-active"><a href="/">1</a></li>
+            <li class="page-item"><a href="/">2</a></li>
+            <li class="page-item"><a href="/">3</a></li>
+            <li class="page-item"><a href="/">4</a></li>
+            <li class="page-item"><a href="/">5</a></li>
+          </ol>
+          <button type="button" class="page-control page-next">
+            <i class="ic-chevron"></i>
+          </button>
         </div>
       </div>
     </div>
