--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column3</div>
 
         <div>
-          <strong class="tag-red visually-hidden">특가</strong>
+          <strong class="tag-red">특가</strong>
           <strong class="tag-gray">무료배송</strong>
           <strong class="tag-green">첫 리뷰 두 배 적립</strong>
         </div>
