💄 Displace my-menu-content and apply button status

--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
                 </a>
 
                 <div class="my-menu sm-hidden">
-                  <button class="my-menu-button" type="button" aria-label="마이메뉴 열기 버튼">
-                    <div class="avatar-32">
-                      <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
-                    </div>
+                  <button class="my-menu-button is-active" type="button" aria-label="마이메뉴 열기 버튼">
+                    <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
                   </button>
                   <div class="my-menu-content">
                     <ul class="my-menu-list">
