--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
     </div>
   </header>
 
-  <aside>
-    <header>
-      <h1>
+  <aside class="sidebar sm-only">
+    <header class="sidebar-header">
+      <h1 class="logo">
         <a href="/">
           <img src="./assets/images/Logo.svg" alt="내일의 집" />
         </a>
       </h1>
 
       <!-- NOTE: 로그인을 한 경우  -->
-      <div>
+      <div class="sidebar-user">
         <a href="/">
           <div class="avatar-24">
             <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" />
@@ -141,30 +141,30 @@
       </div>
 
       <!-- NOTE: 로그인을 하지 않은 경우  -->
-      <div>
+      <div class="sidebar-auth">
         <a href="/">로그인</a>
         <a href="/">로그아웃</a>
       </div>
     </header>
 
 
-    <nav>
+    <nav class="sidebar-nav">
       <h2 class="visually-hidden">메뉴</h2>
 
-      <div>
-        <button type="button">
+      <div class="drawer-menu">
+        <button class="drawer-menu-button" type="button">
           <i class="ic-store" aria-hidden>
             스토어
           </i>
           <i class="ic-chevron" aria-hidden></i>
         </button>
 
-        <div>
-          <ul>
-            <li><a href="/">스토어</a></li>
-            <li><a href="/">카테고리</a></li>
-            <li><a href="/">신혼가구</a></li>
-            <li>
+        <div class="drawer-menu-content">
+          <ul class="drawer-menu-list">
+            <li class="drawer-menu-item"><a href="/">스토어</a></li>
+            <li class="drawer-menu-item"><a href="/">카테고리</a></li>
+            <li class="drawer-menu-item"><a href="/">신혼가구</a></li>
+            <li class="drawer-menu-item">
               <a href="/">
                 기획전
                 <i class="ic-new" lang="en" aria-label="New"></i>
@@ -175,13 +175,13 @@
       </div>
 
       <!-- NOTE: 로그인을 한 경우  -->
-      <div>
-        <ul>
-          <li><a href="/">마이페이지</a></li>
-          <li><a href="/">나의 쇼핑</a></li>
-          <li><a href="/">스크랩북</a></li>
-          <li><a href="/">알림</a></li>
-          <li><a href="/">이벤트</a></li>
+      <div class="sidebar-user-menu">
+        <ul class="user-menu-list">
+          <li class="user-menu-item"><a href="/">마이페이지</a></li>
+          <li class="user-menu-item"><a href="/">나의 쇼핑</a></li>
+          <li class="user-menu-item"><a href="/">스크랩북</a></li>
+          <li class="user-menu-item"><a href="/">알림</a></li>
+          <li class="user-menu-item"><a href="/">이벤트</a></li>
         </ul>
       </div>
     </nav>
