--- a/index.html
+++ b/index.html
@@ -1,95 +1,132 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3da5f5" />
+    <meta name="msapplication-TileColor" content="#2b5797" />
+    <meta name="theme-color" content="#ffffff" />
+    <title>
+      레인지대 &gt; 알렉스 화이트 렌지대 주방수납장 A타입 (1000/1200) | 내일의
+      집
+    </title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3da5f5" />
-  <meta name="msapplication-TileColor" content="#2b5797" />
-  <meta name="theme-color" content="#ffffff" />
-  <title>
-    레인지대 &gt; 알렉스 화이트 렌지대 주방수납장 A타입 (1000/1200) | 내일의
-    집
-  </title>
-</head>
+  <body>
+    <header class="gnb">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="gnb-wrapper">
+              <div class="gnb-left">
+                <h1 class="logo">
+                  <a href="/">
+                    <img src="./assets/images/Logo.svg" alt="내일의 집" />
+                  </a>
+                </h1>
 
-<body>
-  <header class="gnb">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="gnb-wrapper">
-            <div class="gnb-left">
-              <h1 class="logo">
-                <a href="/">
-                  <img src="./assets/images/Logo.svg" alt="내일의 집">
-                </a>
-              </h1>
+                <nav class="gnb-nav sm-hidden">
+                  <h2 class="visually-hidden">메뉴</h2>
+                  <ul class="gnb-nav-list">
+                    <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
+                    <li class="gnb-nav-item is-active">
+                      <a href="/">스토어</a>
+                    </li>
+                    <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
+                  </ul>
+                </nav>
 
-              <nav class="gnb-nav sm-hidden">
-                <h2 class="visually-hidden">메뉴</h2>
-                <ul class="gnb-nav-list">
-                  <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
-                  <li class="gnb-nav-item is-active"><a href="/">스토어</a></li>
-                  <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
-                </ul>
-              </nav>
-
-              <button class="gnb-icon-button is-menu sm-only" type="button" aria-label="메뉴 열기 버튼">
-                <i class="ic-menu"></i>
-              </button>
-            </div>
-
-            <div class="gnb-right">
-              <div class="input-group lg-only">
-                <i class="ic-search" aria-hidden></i>
-                <input class="form-input" type="text" placeholder="스토어 검색">
+                <button
+                  class="gnb-icon-button is-menu sm-only"
+                  type="button"
+                  aria-label="메뉴 열기 버튼"
+                >
+                  <i class="ic-menu"></i>
+                </button>
               </div>
 
-              <!-- NOTE: 로그인을 한 경우  -->
-              <div class="button-group">
-                <button class="gnb-icon-button is-search lg-hidden" type="button" aria-label="검색창 열기 버튼">
-                  <i class="ic-search"></i>
-                </button>
+              <div class="gnb-right">
+                <div class="input-group lg-only">
+                  <i class="ic-search" aria-hidden></i>
+                  <input
+                    class="form-input"
+                    type="text"
+                    placeholder="스토어 검색"
+                  />
+                </div>
 
-                <a class="gnb-icon-button sm-hidden" href="/" aria-label="스크랩북 페이지로 이동">
-                  <i class="ic-bookmark"></i>
-                </a>
-
-                <a class="gnb-icon-button sm-hidden" href="/" aria-label="내 소식 페이지로 이동">
-                  <i class="ic-bell"></i>
-                </a>
-
-                <a class="gnb-icon-button is-cart" href="/" aria-label="장바구니 페이지로 이동">
-                  <i class="ic-cart"></i>
-                  <strong class="badge">5</strong>
-                </a>
-
-                <div class="my-menu sm-hidden">
-                  <button class="my-menu-button is-active" type="button" aria-label="마이메뉴 열기 버튼">
-                    <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
+                <!-- NOTE: 로그인을 한 경우  -->
+                <div class="button-group">
+                  <button
+                    class="gnb-icon-button is-search lg-hidden"
+                    type="button"
+                    aria-label="검색창 열기 버튼"
+                  >
+                    <i class="ic-search"></i>
                   </button>
-                  <div class="my-menu-content">
-                    <ul class="my-menu-list">
-                      <li class="my-menu-item"><a href="/">마이페이지</a></li>
-                      <li class="my-menu-item"><a href="/">나의 쇼핑</a></li>
-                      <li class="my-menu-item"><a href="/">이벤트</a></li>
-                      <li class="my-menu-item"><button type="button">로그아웃</button></li>
-                    </ul>
+
+                  <a
+                    class="gnb-icon-button sm-hidden"
+                    href="/"
+                    aria-label="스크랩북 페이지로 이동"
+                  >
+                    <i class="ic-bookmark"></i>
+                  </a>
+
+                  <a
+                    class="gnb-icon-button sm-hidden"
+                    href="/"
+                    aria-label="내 소식 페이지로 이동"
+                  >
+                    <i class="ic-bell"></i>
+                  </a>
+
+                  <a
+                    class="gnb-icon-button is-cart"
+                    href="/"
+                    aria-label="장바구니 페이지로 이동"
+                  >
+                    <i class="ic-cart"></i>
+                    <strong class="badge">5</strong>
+                  </a>
+
+                  <div class="my-menu sm-hidden">
+                    <button
+                      class="my-menu-button is-active"
+                      type="button"
+                      aria-label="마이메뉴 열기 버튼"
+                    >
+                      <!-- <img
+                        src="./assets/images/img-user-01.jpg"
+                        alt="사딸라 아저씨"
+                      /> -->
+                    </button>
+                    <div class="my-menu-content">
+                      <ul class="my-menu-list">
+                        <li class="my-menu-item"><a href="/">마이페이지</a></li>
+                        <li class="my-menu-item"><a href="/">나의 쇼핑</a></li>
+                        <li class="my-menu-item"><a href="/">이벤트</a></li>
+                        <li class="my-menu-item">
+                          <button type="button">로그아웃</button>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
-              </div>
 
-              <!-- NOTE: 로그인을 하지 않은 경우  -->
-              <!-- <div class="button-group">
+                <!-- NOTE: 로그인을 하지 않은 경우  -->
+                <!-- <div class="button-group">
                 <button
                   class="gnb-icon-button is-search lg-hidden"
                   type="button"
@@ -111,81 +148,79 @@
                 </div>
               </div> -->
 
-              <button class="btn-primary btn-40 sm-hidden" type="button">
-                글쓰기
-                <i class="ic-chevron" aria-hidden></i>
-              </button>
+                <button class="btn-primary btn-40 sm-hidden" type="button">
+                  글쓰기
+                  <i class="ic-chevron" aria-hidden></i>
+                </button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
-
-  <aside class="sidebar sm-only">
-    <header class="sidebar-header">
-      <h1 class="logo">
-        <a href="/">
-          <img src="./assets/images/Logo.svg" alt="내일의 집" />
-        </a>
-      </h1>
-
-      <!-- NOTE: 로그인을 한 경우  -->
-      <div class="sidebar-user">
-        <a href="/">
-          <div class="avatar-24">
-            <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" />
-          </div>
-          <strong>사딸라</strong>
-        </a>
-      </div>
-
-      <!-- NOTE: 로그인을 하지 않은 경우  -->
-      <div class="sidebar-auth">
-        <a href="/">로그인</a>
-        <a href="/">로그아웃</a>
-      </div>
     </header>
 
+    <aside class="sidebar sm-only">
+      <header class="sidebar-header">
+        <h1 class="logo">
+          <a href="/">
+            <img src="./assets/images/Logo.svg" alt="내일의 집" />
+          </a>
+        </h1>
 
-    <nav class="sidebar-nav">
-      <h2 class="visually-hidden">메뉴</h2>
+        <!-- NOTE: 로그인을 한 경우  -->
+        <div class="sidebar-user">
+          <a href="/">
+            <div class="avatar-24">
+              <!-- <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" /> -->
+            </div>
+            <strong class="username"
+              >사딸라사딸라사딸라사딸라사딸라사딸라사딸라</strong
+            >
+          </a>
+        </div>
 
-      <div class="drawer-menu">
-        <button class="drawer-menu-button" type="button">
-          <i class="ic-store" aria-hidden>
-            스토어
-          </i>
-          <i class="ic-chevron" aria-hidden></i>
-        </button>
+        <!-- NOTE: 로그인을 하지 않은 경우  -->
+        <!-- <div class="sidebar-auth">
+          <a class="btn-40 btn-outlined" href="/">로그인</a>
+          <a class="btn-40 btn-primary" href="/">로그아웃</a>
+        </div> -->
+      </header>
 
-        <div class="drawer-menu-content">
-          <ul class="drawer-menu-list">
-            <li class="drawer-menu-item"><a href="/">스토어</a></li>
-            <li class="drawer-menu-item"><a href="/">카테고리</a></li>
-            <li class="drawer-menu-item"><a href="/">신혼가구</a></li>
-            <li class="drawer-menu-item">
-              <a href="/">
-                기획전
-                <i class="ic-new" lang="en" aria-label="New"></i>
-              </a>
-            </li>
+      <nav class="sidebar-nav">
+        <h2 class="visually-hidden">메뉴</h2>
+
+        <div class="drawer-menu">
+          <button class="drawer-menu-button" type="button">
+            <i class="ic-store" aria-hidden> 스토어 </i>
+            <i class="ic-chevron" aria-hidden></i>
+          </button>
+
+          <div class="drawer-menu-content">
+            <ul class="drawer-menu-list">
+              <li class="drawer-menu-item"><a href="/">스토어</a></li>
+              <li class="drawer-menu-item"><a href="/">카테고리</a></li>
+              <li class="drawer-menu-item"><a href="/">신혼가구</a></li>
+              <li class="drawer-menu-item">
+                <a href="/">
+                  기획전
+                  <i class="ic-new" lang="en" aria-label="New"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- NOTE: 로그인을 한 경우  -->
+        <div class="sidebar-user-menu">
+          <ul class="user-menu-list">
+            <li class="user-menu-item"><a href="/">마이페이지</a></li>
+            <li class="user-menu-item"><a href="/">나의 쇼핑</a></li>
+            <li class="user-menu-item"><a href="/">스크랩북</a></li>
+            <li class="user-menu-item"><a href="/">알림</a></li>
+            <li class="user-menu-item"><a href="/">이벤트</a></li>
           </ul>
         </div>
-      </div>
-
-      <!-- NOTE: 로그인을 한 경우  -->
-      <div class="sidebar-user-menu">
-        <ul class="user-menu-list">
-          <li class="user-menu-item"><a href="/">마이페이지</a></li>
-          <li class="user-menu-item"><a href="/">나의 쇼핑</a></li>
-          <li class="user-menu-item"><a href="/">스크랩북</a></li>
-          <li class="user-menu-item"><a href="/">알림</a></li>
-          <li class="user-menu-item"><a href="/">이벤트</a></li>
-        </ul>
-      </div>
-    </nav>
-  </aside>
-</body>
-
+      </nav>
+    </aside>
+  </body>
 </html>
