--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="avatar-24">
             <!-- <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" /> -->
           </div>
-          <strong class="username">사딸라사딸라사딸라사딸라사딸라사딸라사딸라</strong>
+          <strong class="username">사딸라</strong>
         </a>
       </div>
 
