--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
   </header>
 
-  <aside class="sidebar sm-only">
+  <aside class="sidebar sm-only is-active">
     <header class="sidebar-header">
       <h1 class="logo">
         <a href="/">
@@ -269,7 +269,7 @@
     </nav>
   </aside>
 
-  <div class="overlay" aria-hidden></div>
+  <div class="overlay is-active" aria-hidden></div>
 </body>
 
 </html>
