🐛 Hide my-menu-content by default

--- a/index.html
+++ b/index.html
@@ -75,12 +75,9 @@
                   <strong class="badge">5</strong>
                 </a>
 
-                <div class="my-menu sm-hidden">
-                  <button class="my-menu-button is-active" type="button" aria-label="마이메뉴 열기 버튼">
-                    <!-- <img
-                        src="./assets/images/img-user-01.jpg"
-                        alt="사딸라 아저씨"
-                      /> -->
+                <div class="my-menu is-active sm-hidden">
+                  <button class="my-menu-button" type="button" aria-label="마이메뉴 열기 버튼">
+                    <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" />
                   </button>
                   <div class="my-menu-content">
                     <ul class="my-menu-list">
@@ -129,7 +126,7 @@
     </div>
   </header>
 
-  <aside class="sidebar sm-only is-active">
+  <aside class="sidebar sm-only">
     <header class="sidebar-header">
       <h1 class="logo">
         <a href="/">
@@ -325,7 +322,7 @@
     </div>
   </aside>
 
-  <div class="overlay is-active" aria-hidden></div>
+  <div class="overlay" aria-hidden></div>
 </body>
 
 </html>
