--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <dl class="global-footer-detail-list">
             <div class="global-footer-detail-item">
               <dt>상호명</dt>
-              <dd>방루이 방루이</dd>
+              <dd>내일의 집</dd>
             </div>
             <div class="global-footer-detail-item">
               <dt>이메일</dt>
@@ -243,7 +243,7 @@
             </div>
             <div class="global-footer-detail-item">
               <dt>대표이사</dt>
-              <dd>방루이</dd>
+              <dd>강바울</dd>
             </div>
             <div class="global-footer-detail-item">
               <dt>주소</dt>
