💄 Finish implementing both tablet & desktop style of product-info

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               </h1>
 
               <div class="info-review">
-                <div class="star-rating-13">
+                <div class="star-rating">
                   <i class="ic-star is-active"></i>
                   <i class="ic-star is-active"></i>
                   <i class="ic-star is-active"></i>
