--- a/components.html
+++ b/components.html
@@ -1,150 +1,180 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3da5f5" />
-    <meta name="msapplication-TileColor" content="#2b5797" />
-    <meta name="theme-color" content="#ffffff" />
-    <title>
-      레인지대 &gt; 알렉스 화이트 렌지대 주방수납장 A타입 (1000/1200) | 내일의
-      집
-    </title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column1</div>
-        <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column2</div>
-        <div class="col-sm-3 col-md-6 col-lg-4" style="background-color: #06f;">Column3</div>
 
-        <div>
-          <strong class="tag-red">특가</strong>
-          <strong class="tag-gray">무료배송</strong>
-          <strong class="tag-green">첫 리뷰 두 배 적립</strong>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3da5f5" />
+  <meta name="msapplication-TileColor" content="#2b5797" />
+  <meta name="theme-color" content="#ffffff" />
+  <title>
+    레인지대 &gt; 알렉스 화이트 렌지대 주방수납장 A타입 (1000/1200) | 내일의
+    집
+  </title>
+</head>
 
-      </div>
-      <div class="avatar-32">
-        <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
-      </div>
-      <div class="avatar-24">
-        <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
-      </div>
-      <div class="star-rating-13">
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-      </div>
-      <div class="star-rating-20">
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-      </div>
-      <div class="star-rating-24">
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-        <i class="ic-star is-active"></i>
-      </div>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4 col-md-6 col-lg-4" style="background-color: yellowgreen; color: white;">Column1</div>
+      <div class="col-sm-4 col-md-6 col-lg-4" style="background-color: blueviolet; color: white;">Column2</div>
+      <div class="col-sm-4 col-md-6 col-lg-4" style="background-color: mediumaquamarine; color: white;">Column3</div>
+
       <div>
-        <div class="price-off">
-          <strong class="amount">40,000</strong>
-          <span class="currency">원</span>
-        </div>
-        <div class="price-16">
-          <strong class="amount">40,000</strong>
-          <span class="currency">원</span>
-        </div>
-        <div class="price-20">
-          <strong class="amount">40,000</strong>
-          <span class="currency">원</span>
-        </div>
-        <div class="price-32">
-          <strong class="amount">40,000</strong>
-          <span class="currency">원</span>
-        </div>
+        <strong class="tag-red">특가</strong>
+        <strong class="tag-gray">무료배송</strong>
+        <strong class="tag-green">첫 리뷰 두 배 적립</strong>
       </div>
-      <div>
-        <button type="button" class="btn-primary btn-32">버튼입니다</button>
-        <button type="button" class="btn-secondary btn-32">버튼입니다</button>
-        <button type="button" class="btn-outlined btn-32">버튼입니다</button>
-        <button type="button" class="btn-ghost btn-32">버튼입니다</button>
+
+    </div>
+    <div class="avatar-32">
+      <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
+    </div>
+    <div class="avatar-24">
+      <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨">
+    </div>
+    <div class="star-rating-13">
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+    </div>
+    <div class="star-rating-20">
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+    </div>
+    <div class="star-rating-24">
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+      <i class="ic-star is-active"></i>
+    </div>
+    <div>
+      <div class="price-off">
+        <strong class="amount">40,000</strong>
+        <span class="currency">원</span>
       </div>
-      <div>
-        <button type="button" class="btn-primary btn-40">버튼입니다</button>
-        <button type="button" class="btn-secondary btn-40">버튼입니다</button>
-        <button type="button" class="btn-outlined btn-40">버튼입니다</button>
-        <button type="button" class="btn-ghost btn-40">버튼입니다</button>
+      <div class="price-16">
+        <strong class="amount">40,000</strong>
+        <span class="currency">원</span>
       </div>
-      <div>
-        <button type="button" class="btn-primary btn-48">버튼입니다</button>
-        <button type="button" class="btn-secondary btn-48">버튼입니다</button>
-        <button type="button" class="btn-outlined btn-48">버튼입니다</button>
-        <button type="button" class="btn-ghost btn-48">버튼입니다</button>
+      <div class="price-20">
+        <strong class="amount">40,000</strong>
+        <span class="currency">원</span>
       </div>
-      <div>
-        <button type="button" class="btn-primary btn-55" disabled>버튼입니다</button>
-        <button type="button" class="btn-secondary btn-55" disabled>버튼입니다</button>
-        <button type="button" class="btn-outlined btn-55" disabled>버튼입니다</button>
-        <button type="button" class="btn-ghost btn-55" disabled>버튼입니다</button>
+      <div class="price-32">
+        <strong class="amount">40,000</strong>
+        <span class="currency">원</span>
       </div>
-      <div>
-        <select disabled>
-          <option value="1">선택사항 1</option>
+    </div>
+    <div>
+      <button type="button" class="btn-primary btn-32">버튼입니다</button>
+      <button type="button" class="btn-secondary btn-32">버튼입니다</button>
+      <button type="button" class="btn-outlined btn-32">버튼입니다</button>
+      <button type="button" class="btn-ghost btn-32">버튼입니다</button>
+    </div>
+    <div>
+      <button type="button" class="btn-primary btn-40">버튼입니다</button>
+      <button type="button" class="btn-secondary btn-40">버튼입니다</button>
+      <button type="button" class="btn-outlined btn-40">버튼입니다</button>
+      <button type="button" class="btn-ghost btn-40">버튼입니다</button>
+    </div>
+    <div>
+      <button type="button" class="btn-primary btn-48">버튼입니다</button>
+      <button type="button" class="btn-secondary btn-48">버튼입니다</button>
+      <button type="button" class="btn-outlined btn-48">버튼입니다</button>
+      <button type="button" class="btn-ghost btn-48">버튼입니다</button>
+    </div>
+    <div>
+      <button type="button" class="btn-primary btn-55" disabled>버튼입니다</button>
+      <button type="button" class="btn-secondary btn-55" disabled>버튼입니다</button>
+      <button type="button" class="btn-outlined btn-55" disabled>버튼입니다</button>
+      <button type="button" class="btn-ghost btn-55" disabled>버튼입니다</button>
+    </div>
+    <div>
+      <select disabled>
+        <option value="1">선택사항 1</option>
+        <option value="2">선택사항 2</option>
+        <option value="3">선택사항 3</option>
+        <option value="4">선택사항 4</option>
+        <option value="5">선택사항 5</option>
+      </select>
+      <div class="select-group is-active">
+        <select class="form-select">
+          <option value="1">선택사항 1선택사항 1</option>
           <option value="2">선택사항 2</option>
           <option value="3">선택사항 3</option>
           <option value="4">선택사항 4</option>
           <option value="5">선택사항 5</option>
         </select>
-        <div class="select-group is-active">
-          <select class="form-select">
-            <option value="1">선택사항 1선택사항 1</option>
-            <option value="2">선택사항 2</option>
-            <option value="3">선택사항 3</option>
-            <option value="4">선택사항 4</option>
-            <option value="5">선택사항 5</option>
-          </select>
-          <i class="ic-caret" aria-hidden></i>
-        </div>
+        <i class="ic-caret" aria-hidden></i>
+      </div>
 
-        <div class="input-group">
-          <i class="ic-search" aria-hidden></i>
-          <input class="form-input" type="text" placeholder="스토어 검색">
-        </div>
+      <div class="input-group">
+        <i class="ic-search" aria-hidden></i>
+        <input class="form-input" type="text" placeholder="스토어 검색">
+      </div>
 
-        <div class="pagination">
-          <button type="button" class="page-control page-prev">
-            <i class="ic-chevron"></i>
+      <div class="pagination">
+        <button type="button" class="page-control page-prev">
+          <i class="ic-chevron"></i>
+        </button>
+        <ol class="page-list">
+          <li class="page-item is-active"><a href="/">1</a></li>
+          <li class="page-item"><a href="/">2</a></li>
+          <li class="page-item"><a href="/">3</a></li>
+          <li class="page-item"><a href="/">4</a></li>
+          <li class="page-item"><a href="/">5</a></li>
+        </ol>
+        <button type="button" class="page-control page-next">
+          <i class="ic-chevron"></i>
+        </button>
+      </div>
+
+      <div>
+        <header class="product-section-header">
+          <h1 class="title">섹션 타이틀</h1>
+        </header>
+
+        <header class="product-section-header">
+          <h1 class="title">섹션 타이틀</h1>
+          <strong class="badge" aria-label="0개">0</strong>
+          <a class="text-button" href="/">버튼</a>
+        </header>
+
+        <header class="product-section-header">
+          <h1 class="title">섹션 타이틀</h1>
+          <strong class="badge" aria-label="0개">0</strong>
+
+          <button class="icon-button" type="button" aria-label="더보기">
+            <i class="ic-chevron" aria-hidden></i>
           </button>
-          <ol class="page-list">
-            <li class="page-item is-active"><a href="/">1</a></li>
-            <li class="page-item"><a href="/">2</a></li>
-            <li class="page-item"><a href="/">3</a></li>
-            <li class="page-item"><a href="/">4</a></li>
-            <li class="page-item"><a href="/">5</a></li>
-          </ol>
-          <button type="button" class="page-control page-next">
-            <i class="ic-chevron"></i>
+        </header>
+
+        <header class="product-section-header">
+          <h1 class="title">섹션 타이틀</h1>
+          <strong class="badge" aria-label="0개">0</strong>
+
+          <button class="icon-button is-right" type="button">
+            <i class="ic-chevron" aria-hidden></i>
           </button>
-        </div>
+        </header>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
