💄 Create a shared component: product-table

--- a/components.html
+++ b/components.html
@@ -173,6 +173,50 @@
           </button>
         </header>
       </div>
+
+
+      <div>
+        <!-- ! -->
+        <table class="product-table">
+          <tbody>
+            <tr>
+              <th scope="row">배송</th>
+              <td>일반택배</td>
+            </tr>
+            <tr>
+              <th scope="row">반품배송비</th>
+              <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+            </tr>
+            <tr>
+              <th scope="row">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, rerum cum, facere autem reprehenderit
+                iusto ea veniam sit quo minima quia magni incidunt. Sed non, labore officia aliquid maxime sint
+                doloribus distinctio impedit deserunt repudiandae quis! Distinctio neque minus eius dicta quasi adipisci
+                accusantium autem commodi iste excepturi, voluptatibus odio?
+              </th>
+              <td>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore at distinctio earum, vitae quod
+                libero. Nisi totam, quo sunt velit itaque ad modi temporibus atque quis nemo eum similique ab recusandae
+                impedit minus cum. Autem quia aliquam possimus inventore nemo, illum ad repudiandae iusto provident
+                nihil excepturi beatae maiores incidunt consequatur sint porro repellendus, quidem animi! Eum
+                accusantium blanditiis dicta ratione a corporis optio, reprehenderit impedit totam neque tempore. Alias
+                neque magni animi ipsam fugiat perspiciatis molestias fugit iste voluptatibus explicabo accusamus
+                repellendus vitae, nobis ratione? Doloribus sint cumque suscipit necessitatibus excepturi ipsum aliquid
+                saepe quibusdam tempore, nisi culpa placeat enim ab natus dolor, consectetur quaerat iure qui. Inventore
+                ex, libero quam voluptatibus assumenda accusamus totam magnam iure tempora ea, velit architecto nobis
+                debitis blanditiis. Obcaecati odio maiores cumque atque officia, quae ipsum. Tempore quas earum facilis
+                ipsum enim repudiandae rem amet tenetur reiciendis, dicta odio voluptates totam ab laudantium beatae
+                molestiae ipsam non animi asperiores veniam recusandae. Earum fuga quod maxime consequuntur repellat nam
+                nobis dolorum, deleniti ea fugiat asperiores vitae magnam minus quaerat delectus, assumenda deserunt
+                possimus vero beatae dolorem. Sit perferendis neque rem quas adipisci, necessitatibus numquam quisquam
+                molestiae officia molestias repudiandae repellendus. Doloribus sapiente facere quis!
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+
     </div>
   </div>
 </body>
