🐛 Fix mark up: product-tab

--- a/index.html
+++ b/index.html
@@ -479,12 +479,17 @@
                 <button type="button">상품정보</button>
               </li>
               <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
-                <button type="button">리뷰</button>
-                <strong class="badge" aria-label="55개 리뷰">566</strong>
+                <button type="button">
+                  리뷰
+                  <strong class="badge" aria-label="55개 리뷰">566</strong>
+                </button>
               </li>
               <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
-                <button type="button">문의</button>
-                <strong class="badge" aria-label="96개 문의">96</strong>
+                <button type="button">
+                  문의
+                  <strong class="badge" aria-label="96개 문의">96</strong>
+                </button>
+
               </li>
               <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
                 <button type="button">배송/환불</button>
