--- a/index.html
+++ b/index.html
@@ -475,13 +475,13 @@
         <div class="row">
           <div class="col-sm-4 col-lg-8">
             <ul class="product-tab-list" role="tablist">
-              <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
+              <li class="product-tab-item is-active" role="tab" aria-labelledby="product-spec">
                 <button type="button">상품정보</button>
               </li>
               <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
                 <button type="button">
                   리뷰
-                  <strong class="badge" aria-label="55개 리뷰">566</strong>
+                  <strong class="badge" aria-label="55개 리뷰">55</strong>
                 </button>
               </li>
               <li class="product-tab-item" role="tab" aria-labelledby="product-spec">
