--- a/index.html
+++ b/index.html
@@ -964,6 +964,19 @@
 
               </ol>
 
+              <div class="pagination">
+                <ol class="page-list">
+                  <li class="page-item is-active"><a href="/">1</a></li>
+                  <li class="page-item"><a href="/">2</a></li>
+                  <li class="page-item"><a href="/">3</a></li>
+                  <li class="page-item"><a href="/">4</a></li>
+                  <li class="page-item"><a href="/">5</a></li>
+                </ol>
+                <button type="button" class="page-control page-next">
+                  <i class="ic-chevron"></i>
+                </button>
+              </div>
+
             </div>
           </section>
 
