✨ Implement .user-gallery-thumbnail

--- a/index.html
+++ b/index.html
@@ -613,6 +613,24 @@
                         </div>
                       </div>
                     </li>
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-6">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-product-02.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            방루이 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                            <img src="./assets/images/img-user-01.jpg" alt="사딸라 아저씨" />
+                          </a>
+                          <a class="username" href="/">방루이</a>
+                          <span class="order">6/461</span>
+                        </div>
+                      </div>
+                    </li>
 
                   </ol>
                 </div>
@@ -634,6 +652,9 @@
                     </li>
                     <li class="thumbnail-item" id="user-gallery-tab-5" role="tab">
                       <button type="button"><img src="./assets/images/img-review-05.jpg" alt="5번 스타일링샷"></button>
+                    </li>
+                    <li class="thumbnail-item" id="user-gallery-tab-6" role="tab">
+                      <button type="button"><img src="./assets/images/img-product-02.jpg" alt="6번 스타일링샷"></button>
                     </li>
                   </ol>
 
