💄 Implement responsive .cart-modal

--- a/index.html
+++ b/index.html
@@ -1785,6 +1785,138 @@
                     </footer>
                   </div>
                 </li>
+                <li class="checkout-item">
+                  <div class="checkout-card">
+                    <header class="checkout-header">
+                      <h4 class="checkout-title">
+                        추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
+                        1위 믿고 구매하세요.
+                      </h4>
+                      <button class="delete-button" type="button" aria-label="해당 상품을 삭제하기">
+                        <i class="ic-close" aria-hidden></i>
+                      </button>
+                    </header>
+
+                    <footer class="checkout-footer">
+                      <div class="checkout-select">
+                        <select id="floating-order-form-checkout-item-1">
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                        </select>
+                        <i class="ic-caret" aria-hidden></i>
+                      </div>
+
+                      <output class="checkout-output" for="floating-order-form-checkout-item-1">
+                        <div class="price-16">
+                          <strong class="amount">32,900</strong>
+                          <span class="currency">원</span>
+                        </div>
+                      </output>
+                    </footer>
+                  </div>
+                </li>
+                <li class="checkout-item">
+                  <div class="checkout-card">
+                    <header class="checkout-header">
+                      <h4 class="checkout-title">
+                        추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
+                        1위 믿고 구매하세요.
+                      </h4>
+                      <button class="delete-button" type="button" aria-label="해당 상품을 삭제하기">
+                        <i class="ic-close" aria-hidden></i>
+                      </button>
+                    </header>
+
+                    <footer class="checkout-footer">
+                      <div class="checkout-select">
+                        <select id="floating-order-form-checkout-item-1">
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                        </select>
+                        <i class="ic-caret" aria-hidden></i>
+                      </div>
+
+                      <output class="checkout-output" for="floating-order-form-checkout-item-1">
+                        <div class="price-16">
+                          <strong class="amount">32,900</strong>
+                          <span class="currency">원</span>
+                        </div>
+                      </output>
+                    </footer>
+                  </div>
+                </li>
+                <li class="checkout-item">
+                  <div class="checkout-card">
+                    <header class="checkout-header">
+                      <h4 class="checkout-title">
+                        추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
+                        1위 믿고 구매하세요.
+                      </h4>
+                      <button class="delete-button" type="button" aria-label="해당 상품을 삭제하기">
+                        <i class="ic-close" aria-hidden></i>
+                      </button>
+                    </header>
+
+                    <footer class="checkout-footer">
+                      <div class="checkout-select">
+                        <select id="floating-order-form-checkout-item-1">
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                        </select>
+                        <i class="ic-caret" aria-hidden></i>
+                      </div>
+
+                      <output class="checkout-output" for="floating-order-form-checkout-item-1">
+                        <div class="price-16">
+                          <strong class="amount">32,900</strong>
+                          <span class="currency">원</span>
+                        </div>
+                      </output>
+                    </footer>
+                  </div>
+                </li>
+                <li class="checkout-item">
+                  <div class="checkout-card">
+                    <header class="checkout-header">
+                      <h4 class="checkout-title">
+                        추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
+                        1위 믿고 구매하세요.
+                      </h4>
+                      <button class="delete-button" type="button" aria-label="해당 상품을 삭제하기">
+                        <i class="ic-close" aria-hidden></i>
+                      </button>
+                    </header>
+
+                    <footer class="checkout-footer">
+                      <div class="checkout-select">
+                        <select id="floating-order-form-checkout-item-1">
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                        </select>
+                        <i class="ic-caret" aria-hidden></i>
+                      </div>
+
+                      <output class="checkout-output" for="floating-order-form-checkout-item-1">
+                        <div class="price-16">
+                          <strong class="amount">32,900</strong>
+                          <span class="currency">원</span>
+                        </div>
+                      </output>
+                    </footer>
+                  </div>
+                </li>
               </ul>
             </div>
 
@@ -1801,12 +1933,12 @@
             </dl>
 
             <div class="button-group">
-              <button class="bookmark-button btn-55" type="button" aria-label="북마크에 추가">
+              <!-- <button class="bookmark-button btn-55" type="button" aria-label="북마크에 추가">
                 <i class="ic-bookmark" aria-hidden></i>
-              </button>
-              <!-- <button class="bookmark-button is-active btn-55" type="button" aria-label="북마크에 해제">
-                <i class="ic-bookmark-filled" aria-hidden></i>
               </button> -->
+              <button class="bookmark-button is-active btn-55" type="button" aria-label="북마크에 해제">
+                <i class="ic-bookmark-filled" aria-hidden></i>
+              </button>
               <button class="btn-outlined btn-55" type="button">장바구니</button>
               <button class="btn-primary btn-55" type="submit">바로구매</button>
             </div>
@@ -2299,7 +2431,16 @@
     </form>
   </aside>
 
-  <div class="overlay" aria-hidden></div>
+  <aside class="cart-modal">
+    <h1 class="cart-title">장바구니에 상품을 담았습니다.</h1>
+
+    <div class="button-group">
+      <a href="/" class="btn-48 btn-primary">장바구니 보러가기</a>
+      <button class="btn-48 btn-secondary" type="button">확인</button>
+    </div>
+  </aside>
+
+  <div class="overlay is-active" aria-hidden></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="./js/carousels.js"></script>
 </body>
