🚧 Implement toggling sidebar menu

--- a/index.html
+++ b/index.html
@@ -2431,7 +2431,7 @@
     </form>
   </aside>
 
-  <aside class="cart-modal is-active">
+  <aside class="cart-modal">
     <h1 class="cart-title">장바구니에 상품을 담았습니다.</h1>
 
     <div class="button-group">
@@ -2441,7 +2441,7 @@
   </aside>
 
   <!-- NOTE: 북마크에 추가했을 때 -->
-  <aside class="bookmark-toast is-active">
+  <aside class="bookmark-toast">
     <h1 class="bookmark-title">스크랩했습니다</h1>
 
     <button class="close-button" type="button" aria-label="닫기">
@@ -2463,9 +2463,10 @@
     </button>
   </aside> -->
 
-  <div class="overlay is-active" aria-hidden></div>
+  <div class="overlay" aria-hidden></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="./js/carousels.js"></script>
+  <script src="./js/sidebar.js"></script>
 </body>
 
 </html>
