🚧 Implement toggling gnb-search

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </div>
 
               <div class="gnb-right">
-                <div class="gnb-search lg-only is-open">
+                <div class="gnb-search lg-only">
                   <div class="input-group">
                     <i class="ic-search" aria-hidden></i>
                     <input class="form-input" type="text" placeholder="스토어 검색" />
@@ -2472,6 +2472,7 @@
   <script src="./js/search-modal.js"></script>
   <script src="./js/order-cta.js"></script>
   <script src="./js/my-menu.js"></script>
+  <script src="./js/gnb-search.js"></script>
 </body>
 
 </html>
