--- a/index.html
+++ b/index.html
@@ -2473,6 +2473,7 @@
   <script src="./js/order-cta.js"></script>
   <script src="./js/my-menu.js"></script>
   <script src="./js/gnb-search.js"></script>
+  <script src="./js/review.js"></script>
 </body>
 
 </html>
