🚧 Implement order-form bookmarking for desktop

--- a/index.html
+++ b/index.html
@@ -1933,9 +1933,9 @@
             </dl>
 
             <div class="button-group">
-              <!-- <button class="bookmark-button btn-55" type="button" aria-label="북마크에 추가">
+              <button class="bookmark-button btn-55" type="button" aria-label="북마크에 추가">
                 <i class="ic-bookmark" aria-hidden></i>
-              </button> -->
+              </button>
               <button class="bookmark-button is-active btn-55" type="button" aria-label="북마크에 해제">
                 <i class="ic-bookmark-filled" aria-hidden></i>
               </button>
@@ -2478,6 +2478,7 @@
   <script src="./js/gnb-search.js"></script>
   <script src="./js/review.js"></script>
   <script src="./js/product-tab.js"></script>
+  <script src="./js/bookmark.js"></script>
 </body>
 
 </html>
