♻️ Refactor order-form bookmarking

--- a/index.html
+++ b/index.html
@@ -1936,9 +1936,9 @@
               <button class="bookmark-button btn-55" type="button" aria-label="북마크에 추가">
                 <i class="ic-bookmark" aria-hidden></i>
               </button>
-              <button class="bookmark-button is-active btn-55" type="button" aria-label="북마크에 해제">
+              <!-- <button class="bookmark-button is-active btn-55" type="button" aria-label="북마크에 해제">
                 <i class="ic-bookmark-filled" aria-hidden></i>
-              </button>
+              </button> -->
               <button class="btn-outlined btn-55" type="button">장바구니</button>
               <button class="btn-primary btn-55" type="submit">바로구매</button>
             </div>
@@ -2478,7 +2478,7 @@
   <script src="./js/gnb-search.js"></script>
   <script src="./js/review.js"></script>
   <script src="./js/product-tab.js"></script>
-  <script src="./js/bookmark.js"></script>
+  <script src="./js/order-form-bookmark.js"></script>
 </body>
 
 </html>
