✨ Implement order-form bookmark, connect order-cta bookmark to order-form bookmark

--- a/index.html
+++ b/index.html
@@ -1951,7 +1951,7 @@
       <!-- NOTE: 북마크를 하지 않았을 때 -->
       <button class="btn-ghost btn-48" type="button">
         <i class="ic-bookmark" aria-hidden></i>
-        <span aria-label="북마크 18,302회">18,302</span>
+        <span aria-label="북마크 28,302회"></span>
       </button>
       <!-- NOTE: 북마크를 했을 때 -->
       <!-- <button class="btn-ghost btn-48 is-active" type="button">
@@ -2468,6 +2468,7 @@
     integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+  <script src="./js/store.js"></script>
   <script src="./js/carousels.js"></script>
   <script src="./js/sidebar.js"></script>
   <script src="./js/sidebar-drawer.js"></script>
