feat: implement gnb-nav-item activation

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <nav class="gnb-nav sm-hidden">
                   <h2 class="visually-hidden">메뉴</h2>
                   <ul class="gnb-nav-list">
-                    <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
-                    <li class="gnb-nav-item is-active">
-                      <a href="/">스토어</a>
+                    <li class="gnb-nav-item is-active"><a href="#">커뮤니티</a></li>
+                    <li class="gnb-nav-item">
+                      <a href="#">스토어</a>
                     </li>
-                    <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
+                    <li class="gnb-nav-item"><a href="#">인테리어시공</a></li>
                   </ul>
                 </nav>
 
@@ -1785,7 +1785,7 @@
                     </footer>
                   </div>
                 </li>
-                <li class="checkout-item">
+                <!-- <li class="checkout-item">
                   <div class="checkout-card">
                     <header class="checkout-header">
                       <h4 class="checkout-title">
@@ -1916,7 +1916,7 @@
                       </output>
                     </footer>
                   </div>
-                </li>
+                </li> -->
               </ul>
             </div>
 
@@ -2480,6 +2480,8 @@
   <script src="./js/review.js"></script>
   <script src="./js/product-tab.js"></script>
   <script src="./js/order-form-bookmark.js"></script>
+  <script src="./js/order-form.js"></script>
+  <script src="./js/gnb-nav.js"></script>
 </body>
 
 </html>
