--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                       <ol class="search-history-list">
                         <li class="search-history-item">
                           <button class="word-button" type="button">
-                            김버그
+                            스탠드
                           </button>
                           <button class="delete-button" type="button" aria-label="검색어 삭제">
                             <i class="ic-close"></i>
@@ -77,7 +77,7 @@
                         </li>
                         <li class="search-history-item">
                           <button class="word-button" type="button">
-                            버그
+                            조명
                           </button>
                           <button class="delete-button" type="button" aria-label="검색어 삭제">
                             <i class="ic-close"></i>
@@ -85,7 +85,7 @@
                         </li>
                         <li class="search-history-item">
                           <button class="word-button" type="button">
-                            튕김버그
+                            침대
                           </button>
                           <button class="delete-button" type="button" aria-label="검색어 삭제">
                             <i class="ic-close"></i>
@@ -1016,7 +1016,7 @@
                       <h3 class="visually-hidden">방루이 님이 작성한 리뷰</h3>
 
                       <a class="avatar-24" href="/">
-                        <img src="./assets/images/img-user-01.jpg" alt="사달라 아저씨" />
+                        <img src="./assets/images/img-user-06.jpeg" alt="사달라 아저씨" />
                       </a>
 
                       <div class="info">
